GNOME Bugzilla – Bug 770069
[PATCH] Fix memory leak in EvJobThumbnail
Last modified: 2016-09-03 06:11:52 UTC
Created attachment 333545 [details] [review] Fix memory leak in EvJobThumbnail Call cairo_surface_destroy() on job->thumbnail_surface in ev_job_thumbnail_dispose().
Comment on attachment 333545 [details] [review] Fix memory leak in EvJobThumbnail Pushed, thanks!