Fix memory leak in EvJobThumbnail

Call cairo_surface_destroy() on job->thumbnail_surface.

https://bugzilla.gnome.org/show_bug.cgi?id=770069